# livecode-archive

./: .gitignore  .pre-commit-config.yaml  .renovaterc.json  .secrets.baseline  README.md  bulk-edit-and-upload.py  bulk-upload-archiveorg.py  bulk-upload-template.csv  download-all.py  full-bulk-archive.py  live-code-uploader-template.ini  live-coding-archiver.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  todo.md
utils/: archiveorgupload.py  configreader.py  jsonloader.py  templater.py  test_jsonloader.py  test_templater.py  youtubeupload.py
