[project]
name = "livecode-archive"
version = "1.01"
description = "A tool used to archive all of the videos from a livecode stream using muxy"
license = "CC0-1.0"
authors = [
       "Scott Fradkin <scott@fradkin.com>"
]
maintainers = [
       "Scott Fradkin <scott@fradkin.com>"
]
dependencies = ["pytest",
                "internetarchive",
                "google-api-python-client",
                "google-auth-oauthlib",
                "ffmpeg-python",
                "tqdm",
                "unidecode"]

[project.optional-dependencies]
dev = ["pytest",
       "pre-commit",
       "black",
       "pycln",
       "isort",
       "detect-secrets"]

[tool.black]
line-length = 120

[tool.pycln]
all = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
